# cuda-kernel-bench

./: .gitignore  CMakeLists.txt  HelloCuda.sln  README.md  run_debug.bat  run_release.bat
HelloCuda/: HelloCuda.vcxproj  Matrix.cu  cublas_matMul.cu  cuda_app_debug.exp  cuda_app_debug.lib  cuda_utils.cu  cuda_utils.h  kernel.cu  main.cpp  main.cu  matrix_add.cu  matrix_mul.cu  matrix_mul.h  matrix_mul_naive.cu  matrix_mul_naive.h  matrix_mul_tiled.cu  matrix_mul_tiled.h  reduce.cu  reduce.h
include/: cublas_matMul.h  matrix_add.h  matrix_mul_naive.h  matrix_mul_tiled.h  reduce.h
src/: cuda_utils.cu  main.cu  matrix_mul_naive.cu  reduce.cu
